--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}{% endblock title %}</title>
+    <link rel="stylesheet" href="{% static "app.css" %}">
+    {% block css_files %}{% endblock css_files %}
   </head>
   <body>
+    <header id="main-navigation">
+      <h1><a href="{% url "starting-page" %}">Jocc's blog</a></h1>
+      <nav><a href="{% url "posts-page" %}">All Posts</a></nav>
+    </header>
     {% block content %} {% endblock content %}
   </body>
 </html>
