--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -3,7 +3,7 @@
     <article class="post">
         {% comment %} <a href="{% url "post-detail-page" slug="the-mountains" %}">  {% endcomment %}
         <a href="{% url "post-detail-page" post.slug %}"> 
-            <img src="{% static "/blog/images/"|add:post.image %}" alt="{{ post.title }}">
+            <img src="{% static "/blog/images/"|add:post.image_name %}" alt="{{ post.title }}">
             <div class="post__content">
                 {% comment %} <h3>{{ post["title"] }}</h3>  {% endcomment %}
                 <h3>{{ post.title }}</h3> 
