--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -12,14 +12,19 @@
 {% block content %}
 <section id="summary">
     <h2>{{ post.title }}</h2>
+    <div>
+        {% for tag in post_tags %}
+        <span class="tag">{{tag.caption}}</span>
+        {% endfor %}
+    </div>
     <article>
-        <img src="{% static "blog/images/"|add:post.image %}" alt="{{ post.title }}">
-        <address>{{ post.author }}</address>
+        <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}">
+        <address><a href="mailto:{{post.author.email}}">{{ post.author }}</a></address>
         <div>Last ubdated on <time>{{ post.date|date:"d M Y" }}</time></div>
     </article>
 
 </section>
 <main>
-    {{ post.content|linebreaks}}
+    {{ post.content|safe }}
 </main>
 {% endblock content %}
